# testStudent

./: CMakeLists.txt  main.cpp
Module1/Task1/: ReadMe  main.cpp
Module1/Task2/: main.cpp
